Fixed login not showing up, it's still formatted badly though. I think updating bootstrap broke everything.

--- a/WebRanker/WebRanker.WebMVC/Content/bootstrap.css
+++ b/WebRanker/WebRanker.WebMVC/Content/bootstrap.css
@@ -2943,10 +2943,6 @@ input[type="button"].btn-block {
   opacity: 0;
 }
 
-.collapse:not(.show) {
-  display: none;
-}
-
 .collapsing {
   position: relative;
   height: 0;
